--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,7 +21,7 @@ const description = 'I am a frontend developer at buzzwoo, focusing on building 
 		<Header />
 		<main class="lg:grid lg:grid-cols-3 lg:gap-8 lg:mx-auto max-w-5xl">
       <div class="mt-12 lg:pt-16">
-        <Picture src="/images/anb.jpg" alt="Armno Prommarak's photo" extraClass="max-h-[300px]"
+        <Picture src="/images/ana.jpg" alt="Armno Prommarak's photo" extraClass="max-h-[300px]"
           width="300" height="300" />
       </div>
 
