move the note to bottom

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -46,15 +46,14 @@ const description = 'I am a frontend developer at buzzwoo, focusing on building 
         <p>
           You can find me on <a href="https://github.com/armno">GitHub</a>. Otherwise, you can also contact me via email at <a href="mailto:monkeyarmno@gmail.com">monkeyarmno at gmail.com</a>*.
         </p>
-
-        <p class="leading-4">
-          <small>*I might or might not reply to your email. Emails from recruiters or online marketers are usually ignored.</small>
-        </p>
-
         <p>
           Nice to meet you!
           <br>
           &ndash; Armno
+        </p>
+
+        <p class="mt-12 leading-4 text-slate-500">
+          <small>*I might or might not reply to your email. Emails from recruiters or online marketers are usually ignored.</small>
         </p>
 
       </div>
