--- a/src/components/GlobalStyle.astro
+++ b/src/components/GlobalStyle.astro
@@ -20,6 +20,10 @@
     @apply underline underline-offset-2 hover:text-green-600;
   }
 
+  a figcaption {
+    @apply no-underline;
+  }
+
   a[href*="files.armno.in.th"] {
     @apply no-underline;
   }
