--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -10,8 +10,6 @@ const { pathname } = Astro.url;
     <br>&copy; 2007&hyphen;now Armno Prommarak. All Rights Reserved.</div>
 
   <div class=" text-slate-600 tracking-wide mt-4">
-
-      <a href="https://armno.in.th/">armno.in.th</a> &middot;
-      <a href="https://armno.cc/">armno.cc</a>
+		<a href="https://armno.in.th/">armno.in.th</a>
   </div>
 </footer>
