--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -5,7 +5,12 @@ import PostLayout from '@layouts/PostLayout.astro';
 export async function getStaticPaths() {
   const allPosts = await getCollection('blog');
   return allPosts.map(post => ({
-    params: { slug: post.slug }, props: { post },
+    params: {
+      slug: post.slug
+    },
+    props: {
+      post
+    },
   }));
 }
 
