remove loading Fira Mono from google fonts

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -21,7 +21,7 @@ const defaultDescription = `I'm Armno - a Thai frontend developer at buzzwoo. Ba
 <link rel="preconnect" crossorigin href="https://fonts.gstatic.com">
 <link rel="preconnect" crossorigin href="https://fonts.googleapis.com">
 <link
-  href="https://fonts.googleapis.com/css?family=Noto+Serif+Thai:400,600|Fira+Mono:400|Anuphan:400,700&display=swap&subset=thai"
+  href="https://fonts.googleapis.com/css?family=Noto+Serif+Thai:400,600|Anuphan:400,700&display=swap&subset=thai"
   rel="stylesheet">
 
 <!--Favicon-->
