replace google fonts with fontsource. closes #28

--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -1,4 +1,11 @@
 ---
+import '@fontsource/noto-serif-thai/latin-400.css';
+import '@fontsource/noto-serif-thai/thai-400.css';
+import '@fontsource/noto-serif-thai/latin-700.css';
+import '@fontsource/noto-serif-thai/thai-700.css';
+import '@fontsource/ibm-plex-sans-thai/thai-700.css';
+import '@fontsource/ibm-plex-sans-thai/latin-700.css';
+
 import Header from '@components/Header.astro';
 import Footer from '@components/Footer.astro';
 import BaseHead from '@components/BaseHead.astro';
