--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,8 @@
 ---
+import '@fontsource/noto-serif-thai/latin-400.css';
+import '@fontsource/noto-serif-thai/latin-700.css';
+import '@fontsource/ibm-plex-sans-thai/latin-600.css';
+
 import Picture from '@components/Picture.astro';
 import Header from '@components/Header.astro';
 import Footer from '@components/Footer.astro';
