--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -2,6 +2,7 @@
 import RelatedPosts from '@components/RelatedPosts.astro';
 import PageLayout from './PageLayout.astro';
 import { format } from 'date-fns';
+import { Image } from '@astrojs/image/components';
 
 const { frontmatter } = Astro.props;
 const { title, pubDate, thumbnail, tags, categories } = frontmatter;
@@ -12,7 +13,7 @@ const canonicalURL = Astro.url;
   <div slot="post-header" class="lg:col-span-full grid grid-cols-1 lg:grid-cols-2 gap-8 lg:mb-20">
     <div class="order-2 lg:order-1 lg:col-start-1 lg:col-end-2 mb-10 lg:mb-0">
       <a href={thumbnail}>
-        <img src={thumbnail} alt={title} class="w-full lg:w-4/5 mx-auto my-0 rounded-3xl">
+        <Image src={thumbnail} alt={title} class="w-full lg:w-4/5 mx-auto my-0 rounded-3xl" width={800} height={533} fit={'cover'} />
       </a>
     </div>
     <div class="order-1 lg:order-2 lg:col-start-2 lg:col-end-3 lg:flex lg:flex-col lg:justify-center lg:gap-3">
