fix wrong url of links in blog listing page

--- a/src/pages/blog/[...page].astro
+++ b/src/pages/blog/[...page].astro
@@ -44,7 +44,7 @@ const content = {
         <li>
           <PostItem
             title={post.data.title}
-            url={post.slug}
+            url={'/blog/' + post.slug}
             thumbnail={post.data.thumbnail}
             pubDate={post.data.pubDate}
             description={post.data.description}
