--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@ import '@fontsource/noto-serif-thai/latin-400.css';
 import '@fontsource/noto-serif-thai/latin-700.css';
 import '@fontsource/ibm-plex-sans-thai/latin-600.css';
 
-import Picture from '@components/Picture.astro';
+import { Picture } from '@astrojs/image/components';
 import Header from '@components/Header.astro';
 import Footer from '@components/Footer.astro';
 import BaseHead from '@components/BaseHead.astro';
@@ -24,12 +24,13 @@ const description = 'I am a frontend developer at buzzwoo, focusing on building 
 		<Header />
 		<main class="lg:grid lg:grid-cols-3 lg:gap-8 lg:mx-auto max-w-5xl">
       <div class="mt-12 lg:pt-16">
-        <Picture src="/images/ana.jpg" alt="Armno Prommarak's photo" extraClass="max-h-[300px]"
-          width="300" height="300" />
+        <Picture src="/images/ana.jpg" alt="Armno Prommarak's photo" class="m-auto"
+          widths={[300,600]} aspectRatio={1}
+          width={300} height={300} />
       </div>
 
       <div class="px-6 mt-12 lg:pt-12 lg:col-span-2 mx-auto prose prose-slate leading-relaxed">
-        <div class="font-semibold tracking-wider text-sm">Hi :wave:</div>
+        <div class="font-semibold tracking-wider text-sm">Hi there,</div>
         <h1 class="text-2xl lg:text-3xl font-light">My name is <strong class="font-semibold">Armno Prommarak</strong>.<br>
           I&rsquo;m a frontend developer at <a href="https://buzzwoo.de" target="_blank">buzzwoo</a>.</h1>
 
