back to sarabun

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,8 @@
 ---
-import '@fontsource/noto-serif-thai/latin-400.css';
-import '@fontsource/noto-serif-thai/latin-700.css';
-import '@fontsource/ibm-plex-sans-thai/latin-600.css';
+import '@fontsource/sarabun/400.css';
+import '@fontsource/sarabun/700.css';
+import '@fontsource/ibm-plex-sans-thai/thai-400.css';
+import '@fontsource/ibm-plex-sans-thai/thai-700.css';
 
 import { Picture } from '@astrojs/image/components';
 import Header from '@components/Header.astro';
