--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -1,9 +1,6 @@
 ---
-import '@fontsource/noto-serif-thai/latin-400.css';
-import '@fontsource/noto-serif-thai/thai-400.css';
-import '@fontsource/noto-serif-thai/latin-700.css';
-import '@fontsource/noto-serif-thai/thai-700.css';
-import '@fontsource/ibm-plex-sans-thai/thai-700.css';
+import '@fontsource/sarabun/400.css';
+import '@fontsource/sarabun/700.css';
 import '@fontsource/ibm-plex-sans-thai/latin-700.css';
 
 import Header from '@components/Header.astro';
