--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -32,7 +32,7 @@ const description = 'I am a frontend developer at buzzwoo, focusing on building 
 
       <div class="px-6 mt-12 lg:pt-12 lg:col-span-2 mx-auto prose prose-slate leading-relaxed">
         <div class="font-semibold tracking-wider text-sm">Hi there,</div>
-        <h1 class="text-2xl lg:text-3xl font-light">My name is <strong class="font-semibold">Armno Prommarak</strong>.<br>
+        <h1 class="text-2xl lg:text-3xl font-normal">My name is <strong class="font-semibold">Armno Prommarak</strong>.<br>
           I&rsquo;m a frontend developer at <a href="https://buzzwoo.de" target="_blank">buzzwoo</a>.</h1>
 
         <p class="mt-20 lg:mt-12">
