--- a/src/components/GlobalStyle.astro
+++ b/src/components/GlobalStyle.astro
@@ -39,6 +39,10 @@
 
     content: "(missing image: " attr(alt) ")";
   }
+
+  kbd {
+    @apply border border-slate-400 rounded-[3px] px-0.5 text-sm;
+  }
 }
 
 @layer components {
