--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,7 +3,7 @@ const { pathname } = Astro.url;
 
 ---
 
-<header class="container mx-auto grid grid-flow-col grid-cols-[1fr] items-center max-w-5xl">
+<header class="font-serif container mx-auto grid grid-flow-col grid-cols-[1fr] items-center max-w-5xl">
   <a href="/" class="inline-block w-12 h-12 md:w-20 md:h-20">
     <svg class="w-12 h-12 md:w-20 md:h-20" width="50" height="50" viewBox="0 0 50 50" fill="none"
       xmlns="http://www.w3.org/2000/svg">
