--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import '@fontsource/sarabun/400.css';
 import '@fontsource/sarabun/700.css';
+import '@fontsource/frank-ruhl-libre/400.css';
 import '@fontsource/frank-ruhl-libre/700.css';
 
 import { Picture } from '@astrojs/image/components';
