rephrase homepage text

--- a/src/pages/blog/[...page].astro
+++ b/src/pages/blog/[...page].astro
@@ -24,7 +24,7 @@ const content = {
 
 <PageLayout frontmatter={content}>
   <WarningMessage>
-    <p>
+    <p class="mt-0">
       Blog listing page is still a work-in-progress.
     </p>
   </WarningMessage>
