--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,7 +23,7 @@ const description = 'I am a frontend developer at buzzwoo, focusing on building 
 	</head>
 	<body class="antialiased">
 		<Header />
-		<main class="lg:grid lg:grid-cols-3 lg:gap-8 lg:mx-auto max-w-5xl">
+		<main class="lg:grid lg:grid-cols-3 lg:gap-8 lg:mx-auto max-w-5xl font-serif leading-normal">
       <div class="mt-12 lg:pt-16">
         <Picture src="/images/ana.jpg" alt="Armno Prommarak's photo" class="m-auto"
           widths={[300,600]} aspectRatio={1}
@@ -31,20 +31,17 @@ const description = 'I am a frontend developer at buzzwoo, focusing on building 
       </div>
 
       <div class="px-6 mt-12 lg:pt-12 lg:col-span-2 mx-auto prose prose-slate leading-relaxed">
-        <div class="font-semibold tracking-wider text-sm">Hi there,</div>
-        <h1 class="text-2xl lg:text-3xl font-normal">My name is <strong class="font-semibold">Armno Prommarak</strong>.<br>
-          I&rsquo;m a frontend developer at <a href="https://buzzwoo.de" target="_blank">buzzwoo</a>.</h1>
+        <!-- <div class="font-semibold tracking-wider text-sm">Hi there,</div> -->
+        <h1 class="text-2xl lg:text-3xl">I build web user interfaces to deliver great user experiences for the web.</h1>
 
-        <p class="mt-20 lg:mt-12">
-          <strong>I build user interfaces to deliver good user experiences on the web.</strong><br>
-          </p>
         <p>
-          I&rsquo;m currently a frontend teamlead at buzzwoo. My main focus is supporting my colleagues to get better on JavaScript frameworks and frontend performance.
+          My name is <strong>Armno Prommarak</strong>.
+          I&rsquo;m currently a frontend teamlead at <a href="https://buzzwoo.de" target="_blank">buzzwoo</a>. My main focus is supporting my colleagues to get better on JavaScript frameworks and frontend performance.
         <p>
-          Besides work, I'm a big nerd. I enjoy reading books, taking photos, <a href="https://armno.in.th/2017/08/20/building-custom-mechanical-keyboard/">building mechanical keyboards</a> and cycling with my <a href="https://www.strava.com/athletes/3637623">road bike</a>.</p>
+          Besides work, I'm a big nerd. I enjoy reading books, taking photos, <a href="https://armno.in.th/2017/08/20/building-custom-mechanical-keyboard/">building mechanical keyboards</a>, cycling with my <a href="https://www.strava.com/athletes/3637623">road bike</a>, and tinkering stuffs. And by the way, I love serif fonts.</p>
 
           Check out my <a href="/blog">blog</a> to see what I&rsquo;ve learned recently.
-          I also write about life in my <a href="https://armno.cc/">personal</a> <a href="https://armno.wordpress.com">blogs</a>.
+          I also write about life in my <a href="https://armno.wordpress.com">personal blog</a>.
         </p>
 
         <h3>Get in touch</h3>
