force serif font stack for h1 on home page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -32,7 +32,7 @@ const description = 'I am a frontend developer at buzzwoo, focusing on building 
 
       <div class="px-6 mt-12 lg:pt-12 lg:col-span-2 mx-auto prose prose-slate leading-relaxed">
         <!-- <div class="font-semibold tracking-wider text-sm">Hi there,</div> -->
-        <h1 class="text-2xl lg:text-3xl">I build web user interfaces to deliver great user experiences for the web.</h1>
+        <h1 class="text-2xl lg:text-3xl font-serif">I build web user interfaces to deliver great user experiences for the web.</h1>
 
         <p>
           My name is <strong>Armno Prommarak</strong>.
