disable lazy load lcp image on home page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,6 +26,7 @@ const description = 'I am a frontend developer at buzzwoo, focusing on building 
 		<main class="lg:grid lg:grid-cols-3 lg:gap-8 lg:mx-auto max-w-5xl font-serif leading-normal">
       <div class="mt-12 lg:pt-16">
         <Picture src="/images/ana.jpg" alt="Armno Prommarak's photo" class="m-auto"
+          loading="eager"
           widths={[300,600]} aspectRatio={1}
           width={300} height={300} />
       </div>
