--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -37,7 +37,7 @@ const description = 'I am a frontend developer at buzzwoo, focusing on building 
 
         <p>
           My name is <strong>Armno Prommarak</strong>.
-          I&rsquo;m currently a frontend teamlead at <a href="https://buzzwoo.de" target="_blank">buzzwoo</a>. My main focus is supporting my colleagues to get better on JavaScript frameworks and frontend performance.
+          I&rsquo;m a frontend teamlead at <a href="https://buzzwoo.de" target="_blank">buzzwoo</a>. My main focus is supporting my colleagues to get better on JavaScript frameworks and frontend performance.
         <p>
           Besides work, I'm a big nerd. I enjoy reading books, taking photos, <a href="https://armno.in.th/2017/08/20/building-custom-mechanical-keyboard/">building mechanical keyboards</a>, cycling with my <a href="https://www.strava.com/athletes/3637623">road bike</a>, and tinkering stuffs. And by the way, I love serif fonts.</p>
 
