--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -7,9 +7,5 @@ const { pathname } = Astro.url;
   <div class="text-slate-600 tracking-wide">Made in <a
     href="https://www.openstreetmap.org/search?query=chiang%20mai#map=16/18.7880/98.9859" target="_blank"
     rel="nofollow noreferrer">Chiang Mai, Thailand</a>
-    <br>&copy; 2007&hyphen;now Armno Prommarak. All Rights Reserved.</div>
-
-  <div class=" text-slate-600 tracking-wide mt-4">
-		<a href="https://armno.in.th/">armno.in.th</a>
-  </div>
+    <br>&copy; 2007&hyphen;now Armno Prommarak.<br>All Rights Reserved.</div>
 </footer>
