upgrade astro and astro-image (WIP)

--- a/src/components/PostItem.astro
+++ b/src/components/PostItem.astro
@@ -1,6 +1,6 @@
 ---
 import { format } from 'date-fns';
-import { Image, Picture } from '@astrojs/image/components';
+import { Image, Picture } from 'astro:assets';
 
 interface Props {
   url: string;
