--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -2,7 +2,7 @@
 import RelatedPosts from '@components/RelatedPosts.astro';
 import PageLayout from './PageLayout.astro';
 import { format } from 'date-fns';
-import { Image } from '@astrojs/image/components';
+import { Image } from 'astro:assets';
 
 const { frontmatter } = Astro.props;
 const { title, pubDate, thumbnail, tags, categories } = frontmatter;
