--- a/src/components/PostItem.astro
+++ b/src/components/PostItem.astro
@@ -1,6 +1,6 @@
 ---
 import { format } from 'date-fns';
-import { Image, Picture } from 'astro:assets';
+import { Image } from 'astro:assets';
 
 interface Props {
   url: string;
@@ -18,7 +18,7 @@ const { url, title, thumbnail, pubDate, description, isLatest, isRelatedPost } =
 <article>
   <a href={url} class="no-underline hover:text-green-600 block">
     {(isLatest || isRelatedPost) && thumbnail &&
-    <Picture class="object-cover aspect-[3/2] w-full" src={thumbnail} alt={title} width={200} height={166} widths={[200,400,700,1400]} aspectRatio={(200/166)} />
+    <Image class="object-cover aspect-[3/2] w-full" src={thumbnail} alt={title} width={200} height={166} />
     }
     {!thumbnail &&
     <div class="border w-full h-28 max-h-48 text-sm flex justify-center items-center text-slate-300">no thumbnail</div>
