--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,31 +23,26 @@ const description =
   </head>
   <body class="antialiased">
     <Header />
-    <main
-      class="mb-20 lg:grid lg:grid-cols-3 lg:gap-8 lg:mx-auto max-w-5xl font-serif leading-normal"
-    >
-      <div class="mt-12 lg:pt-16">
-        <img src="/images/ana.jpg" alt="Armno Prommarak's photo" class="m-auto"
-          loading="eager"
-          width={200} height={200} />
-      </div>
+    <main class="mx-auto max-w-2xl">
 
       <div
-        class="px-6 mt-12 lg:pt-12 lg:col-span-2 mx-auto prose prose-slate leading-relaxed"
+        class="px-6 lg:pt-12 lg:col-span-2 mx-auto prose prose-slate"
       >
+        <img src="/images/ana.jpg" alt="Armno Prommarak's photo"
+          class="rounded-full"
+          loading="eager"
+          width={60} height={60} />
         <!-- <div class="font-semibold tracking-wider text-sm">Hi there,</div> -->
-        <h1 class="text-4xl lg:text-3xl font-serif">
+        <!-- <h1 class="text-2xl font-serif">
           I build web user interfaces to deliver great user experiences for
           the web.
-        </h1>
+        </h1> -->
+        <div class="text-sm mb-8 mt-6">
+          <strong class="text-2xl">Armno Prommarak</strong><br>
+          <div class="text-lg">Frontend Developer & Team Lead at <a href="https://buzzwoo.de" target="_blank">Buzzwoo Asia</a></div>
+          <div class="text-xs mt-1 text-gray-500 tracking-wider">Chiang Mai, Thailand</div>
+        </div>
 
-        <p>
-          Hey, my name is <strong>Armno Prommarak</strong>. I am a frontend
-          developer and a team lead at <a
-            href="https://buzzwoo.de"
-            target="_blank">Buzzwoo Asia</a
-          > &ndash; a digital agency in Chiang Mai, Thailand.
-        </p>
         <p>
           My main focus is about JavaScript frameworks and frontend performance.
         </p>
