update contact section

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -61,18 +61,21 @@ const description =
           >.
         </p>
 
-        <h3>Get in touch</h3>
-        <p>
-          You can find me on <a href="https://github.com/armno">GitHub</a>.
-          Otherwise, you can also contact me via email at <a
-            href="mailto:monkeyarmno@gmail.com">monkeyarmno at gmail.com</a
-          >*.
-        </p>
-        <p>
-          Nice to meet you!
-          <br />
-           &ndash; Armno
-        </p>
+        <h4>Contact</h4>
+        <div class="grid grid-cols-2">
+          <div>Email</div>
+          <div>
+            <a href="mailto:monkeyarmno@gmail.com">monkeyarmno at gmail.com</a>
+          </div>
+          <div>GitHub</div>
+          <div>
+           <a href="https://github.com/armno">armno</a>
+          </div>
+          <div>X (Twitter)</div>
+          <div>
+           <a href="https://x.com/armno">@armno</a> (inactive)
+          </div>
+        </div>
 
         <p class="mt-12 leading-4 text-slate-500">
           <small
