--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,54 +25,58 @@ const description =
     <Header />
     <main class="mx-auto max-w-2xl">
 
-      <div
-        class="px-6 lg:pt-12 lg:col-span-2 mx-auto prose prose-slate"
-      >
-        <img src="/images/ana.jpg" alt="Armno Prommarak's photo"
-          class="rounded-full"
-          loading="eager"
-          width={60} height={60} />
-        <!-- <div class="font-semibold tracking-wider text-sm">Hi there,</div> -->
-        <!-- <h1 class="text-2xl font-serif">
-          I build web user interfaces to deliver great user experiences for
-          the web.
-        </h1> -->
-        <div class="text-sm mb-8 mt-6">
-          <strong class="text-2xl">Armno Prommarak</strong><br>
-          <div class="text-lg">Frontend Developer & Team Lead at <a href="https://buzzwoo.de" target="_blank">Buzzwoo Asia</a></div>
-          <div class="text-xs mt-1 text-gray-500 tracking-wider">Chiang Mai, Thailand</div>
+      <div class="px-6 md:pt-12 md:col-span-2 mx-auto prose prose-slate" >
+        <div class="mt-10 mb-20 text-center md:text-left">
+          <img src="/images/ana.jpg" alt="Armno Prommarak's photo"
+            class="rounded-full mx-auto md:m-0 md:mr-auto"
+            loading="eager"
+            width={60} height={60} />
+          <div class="text-sm mb-8 mt-6">
+            <strong class="text-2xl font-bold">Armno Prommarak</strong>
+            <div class="text-base md:text-lg leading-tight">Frontend Developer & Team Lead at <a href="https://buzzwoo.de" target="_blank">Buzzwoo</a>.</div>
+            <!-- <div class="text-xs mt-4 text-gray-700 tracking-wider">Chiang Mai, Thailand</div> -->
+          </div>
         </div>
 
+        <div class="text-base max-w-lg">
         <p>
-          My main focus is about JavaScript frameworks and frontend performance.
+          👋 Hi. I'm Armno. For the past 10+ years, I have been building things with web technologies at Buzzwoo.
+          My resposibility is to build user interfaces of websites and web applications for our clients.
+          My focus is on JavaScript frameworks and frontend performance.
         </p>
+
+        <h4>Writing</h4>
         <p>
-          Besides work, I'm a big nerd. I enjoy reading books, taking photos, <a
+          I started this website as a blog in 2007. Writing and blogging have been a big part of my life since then.
+          I regularly write blog posts about what I have learned or what motivates me, both technical and non-technical posts.
+        </p>
+        <ul>
+          <li>
+            Web browser ทำงานอย่างไร
+          </li>
+          <li>
+            Building a custom mechanical keyboard
+          </li>
+        </ul>
+
+        <!-- <p>
+          Besides work, I'm still a big nerd. I enjoy reading books, taking photos, <a
             href="https://armno.in.th/2017/08/20/building-custom-mechanical-keyboard/"
             >building mechanical keyboards</a
           >, cycling with my <a href="https://www.strava.com/athletes/3637623"
             >road bike</a
           >, and tinkering stuffs. And by the way, I love serif fonts.
-        </p>
-        <p>
-          Check out my <a href="/blog">blog</a> to see what I&rsquo;ve learned
-          recently. I also write about life in my <a
-            href="https://armno.wordpress.com">personal blog</a
-          >.
-        </p>
-
-        <h4>Contact</h4>
-        <div class="grid grid-cols-2">
-          <div>Email</div>
-          <div>
+        </p> -->
+      </div>
+        <h3>Contact</h3>
+        <div class="">
+          <div>Email
             <a href="mailto:monkeyarmno@gmail.com">monkeyarmno at gmail.com</a>
           </div>
-          <div>GitHub</div>
-          <div>
+          <div>GitHub
            <a href="https://github.com/armno">armno</a>
           </div>
-          <div>X (Twitter)</div>
-          <div>
+          <div>X (Twitter)
            <a href="https://x.com/armno">@armno</a> (inactive)
           </div>
         </div>
