--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,43 +23,56 @@ const description =
   </head>
   <body class="antialiased">
     <Header />
-    <main class="mx-auto max-w-2xl">
-
-      <div class="px-6 md:pt-12 md:col-span-2 mx-auto prose prose-slate" >
+    <main class="mx-auto max-w-2xl mb-20">
+      <div class="px-6 md:pt-12 md:col-span-2 mx-auto prose prose-slate">
         <div class="mt-10 mb-20 text-center md:text-left">
-          <img src="/images/ana.jpg" alt="Armno Prommarak's photo"
+          <img
+            src="/images/ana.jpg"
+            alt="Armno Prommarak's photo"
             class="rounded-full mx-auto md:m-0 md:mr-auto"
             loading="eager"
-            width={60} height={60} />
+            width={60}
+            height={60}
+          />
           <div class="text-sm mb-8 mt-6">
             <strong class="text-2xl font-bold">Armno Prommarak</strong>
-            <div class="text-base md:text-lg leading-tight">Frontend Developer & Team Lead at <a href="https://buzzwoo.de" target="_blank">Buzzwoo</a>.</div>
+            <div class="text-base md:text-lg leading-tight">
+              Frontend Developer & Team Lead at <a
+                href="https://buzzwoo.de"
+                target="_blank">Buzzwoo</a
+              >.
+            </div>
             <!-- <div class="text-xs mt-4 text-gray-700 tracking-wider">Chiang Mai, Thailand</div> -->
           </div>
         </div>
 
-        <div class="text-base max-w-lg">
-        <p>
-          👋 Hi. I'm Armno. For the past 10+ years, I have been building things with web technologies at Buzzwoo.
-          My resposibility is to build user interfaces of websites and web applications for our clients.
-          My focus is on JavaScript frameworks and frontend performance.
-        </p>
+        <div class="text-base">
+          <p>
+            👋 Hi. I'm Armno. For the past 10+ years, I have been building
+            things with web technologies at <a
+              href="https://buzzwoo.de"
+              target="_blank">Buzzwoo</a
+            > &ndash; a digital agency in Chiang Mai, Thailand.
+          </p>
+          <p>
+            My main resposibility is to build user interfaces of websites and
+            web applications for our clients. JavaScript frameworks and frontend
+            performance are areas I enjoy working on the most.
+          </p>
 
-        <h4>Writing</h4>
-        <p>
-          I started this website as a blog in 2007. Writing and blogging have been a big part of my life since then.
-          I regularly write blog posts about what I have learned or what motivates me, both technical and non-technical posts.
-        </p>
-        <ul>
-          <li>
-            Web browser ทำงานอย่างไร
-          </li>
-          <li>
-            Building a custom mechanical keyboard
-          </li>
-        </ul>
+          <h4>Writing</h4>
+          <p>
+            I started this website as a blog in 2007. Writing and blogging have
+            been a big part of my life since then. I regularly write blog posts
+            about what I have learned or what motivates me, both technical and
+            non-technical posts.
+          </p>
+          <ul>
+            <li>Web browser ทำงานอย่างไร</li>
+            <li>Building a custom mechanical keyboard</li>
+          </ul>
 
-        <!-- <p>
+          <!-- <p>
           Besides work, I'm still a big nerd. I enjoy reading books, taking photos, <a
             href="https://armno.in.th/2017/08/20/building-custom-mechanical-keyboard/"
             >building mechanical keyboards</a
@@ -67,27 +80,26 @@ const description =
             >road bike</a
           >, and tinkering stuffs. And by the way, I love serif fonts.
         </p> -->
-      </div>
-        <h3>Contact</h3>
-        <div class="">
-          <div>Email
-            <a href="mailto:monkeyarmno@gmail.com">monkeyarmno at gmail.com</a>
-          </div>
-          <div>GitHub
-           <a href="https://github.com/armno">armno</a>
-          </div>
-          <div>X (Twitter)
-           <a href="https://x.com/armno">@armno</a> (inactive)
-          </div>
         </div>
-
-        <p class="mt-12 leading-4 text-slate-500">
-          <small
-            >*I might or might not reply to your email. Emails from recruiters
-            or online marketers are usually ignored.</small
-          >
-        </p>
+        <h4>Contact</h4>
+        <ul class="text-sm">
+          <li>
+            Email:
+            <a href="mailto:monkeyarmno@gmail.com">monkeyarmno at gmail.com</a>
+          </li>
+          <li>
+            GitHub:
+            <a href="https://github.com/armno">armno</a>
+          </li>
+          <li>
+            X (Twitter):
+            <a href="https://x.com/armno">@armno</a>
+            <span class="text-xs">(I'm no longer active there)</span>
+          </li>
+        </ul>
       </div>
     </main>
   </body>
 </html>
+
+
