update footer styles

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,7 +23,7 @@ const description =
   </head>
   <body class="antialiased">
     <Header />
-    <main class="mx-auto max-w-2xl mb-20">
+    <main class="mx-auto max-w-2xl mb-12">
       <div class="px-6 md:pt-12 md:col-span-2 mx-auto prose prose-slate">
         <div class="mt-10 mb-20 text-center md:text-left">
           <img
@@ -35,7 +35,7 @@ const description =
             height={60}
           />
           <div class="text-sm mb-8 mt-6">
-            <strong class="text-2xl font-bold">Armno Prommarak</strong>
+            <strong class="text-2xl font-bold">Armno Prommarak 🇹🇭</strong>
             <div class="text-base md:text-lg leading-tight">
               Frontend Developer & Team Lead at <a
                 href="https://buzzwoo.de"
@@ -52,7 +52,7 @@ const description =
             things with web technologies at <a
               href="https://buzzwoo.de"
               target="_blank">Buzzwoo</a
-            > &ndash; a digital agency in Chiang Mai, Thailand.
+            > 🇩🇪 &ndash; a digital agency in Chiang Mai, Thailand.
           </p>
           <p>
             My main resposibility is to build user interfaces of websites and
@@ -65,23 +65,30 @@ const description =
             I started this website as a blog in 2007. Writing and blogging have
             been a big part of my life since then. I regularly write blog posts
             about what I have learned or what motivates me, both technical and
-            non-technical posts.
+            non-technical posts. Here are some of my favorites.
           </p>
           <ul>
             <li>Web browser ทำงานอย่างไร</li>
-            <li>Building a custom mechanical keyboard</li>
+            <li>
+              <a
+                href="https://armno.in.th/2017/08/20/building-custom-mechanical-keyboard/"
+                >Building a custom mechanical keyboard</a
+              >
+            </li>
           </ul>
 
-          <!-- <p>
-          Besides work, I'm still a big nerd. I enjoy reading books, taking photos, <a
-            href="https://armno.in.th/2017/08/20/building-custom-mechanical-keyboard/"
-            >building mechanical keyboards</a
-          >, cycling with my <a href="https://www.strava.com/athletes/3637623"
-            >road bike</a
-          >, and tinkering stuffs. And by the way, I love serif fonts.
-        </p> -->
+          <h4>Life</h4>
+          <p>
+            I'm a husband. I'm also a dad of 2 kids. So most of my time besides work are spent with my
+            family. Personally, I still see my self as a big nerd. I enjoy
+            reading books, taking photos, building mechanical keyboards, and
+            fixing stuffs that are not acually broken. On some Sundays, I would
+            go out for a ride with my <a
+              href="https://www.strava.com/athletes/3637623">road bike</a
+            >.
+          </p>
         </div>
-        <h4>Contact</h4>
+        <h4>Get in touch</h4>
         <ul class="text-sm">
           <li>
             Email:
@@ -99,7 +106,6 @@ const description =
         </ul>
       </div>
     </main>
+    <Footer></Footer>
   </body>
 </html>
-
-
