add more whitespace

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -46,7 +46,7 @@ const description =
           </div>
         </div>
 
-        <div class="text-base">
+        <div class="text-base mb-16">
           <p>
             👋 Hi. I'm Armno. For the past 10+ years, I have been building
             things with web technologies at <a
@@ -101,7 +101,6 @@ const description =
           <li>
             X (Twitter):
             <a href="https://x.com/armno">@armno</a>
-            <span class="text-xs">(I'm no longer active there)</span>
           </li>
         </ul>
       </div>
