--- a/src/pages/blog/[...page].astro
+++ b/src/pages/blog/[...page].astro
@@ -10,7 +10,7 @@ export async function getStaticPaths({ paginate }) {
   const sortedPosts = allPosts.sort((a, b) => {
     return new Date(b.data.pubDate) - new Date(a.data.pubDate);
   });
-  return paginate(sortedPosts, { pageSize: 10});
+  return paginate(sortedPosts, { pageSize: 1000});
 }
 
 const { page } = Astro.props;
@@ -23,11 +23,11 @@ const content = {
 ---
 
 <PageLayout frontmatter={content}>
-  <WarningMessage>
+  <!-- <WarningMessage>
     <p class="mt-0">
       Blog listing page is still a work-in-progress.
     </p>
-  </WarningMessage>
+  </WarningMessage> -->
 
 
   <div class="flex items-baseline mb-8 container mx-auto px-6 md:px-0 mt-6">
@@ -37,20 +37,17 @@ const content = {
   </div>
 
   <ol
-    class="list-none px-6 md:p-0 not-prose grid container mx-auto grid-cols-[repeat(auto-fit,minmax(300px,1fr))] gap-x-12 gap-y-12 lg:gap-x-16 lg:gap-y-16"
+    class="list-none px-6 md:p-0 not-prose "
   >
     {
       page.data.map((post, index) => (
-        <li>
+        <li class="mb-6">
           <PostItem
             title={post.data.title}
             url={'/blog/' + post.slug}
-            thumbnail={post.data.thumbnail}
+            // thumbnail={post.data.thumbnail}
             pubDate={post.data.pubDate}
-            description={post.data.description}
-            isLatest={index === 0}
           />
-          <hr class="w-1/2 mx-auto mt-12">
         </li>
       ))
     }
